--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+/* Import a prebuilt Angular Material theme */
+
+
+/* Import custom theme overrides */
+@import "./custom-theme.css";
+
+/* Global styles */
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #f5f5f5;
+  color: #333;
+}
+
+  /* Other global styles or CSS resets can go here */
+  
+
+
+
+
+
+
+
